--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
+    "memcached": "^2.1.0",
     "morgan": "~1.5.1",
     "request": "^2.51.0",
     "serve-favicon": "~2.2.0"
+  }
 }
