--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "jade": "~1.9.1",
+    "jshashes": "^1.0.5",
     "memcached": "^2.1.0",
     "morgan": "~1.5.1",
     "request": "^2.51.0",
